<resources>

    <!--App name-->
    <string name="app_name">iTrip</string>
    <string name="app_internet_error">Comprobá la conexión a Internet</string>

    <!--Drawer-->
    <string name="drawer_open">Abrir menú</string>
    <string name="drawer_close">Cerrar menú</string>

    <!--Drawer Menu-->
    <string name="drawer_menu_travels">Mis Viajes</string>
    <string name="drawer_menu_create_travel">Crear Viaje</string>
    <string name="drawer_menu_preferences">Preferencias</string>
    <string name="drawer_menu_logout">Salir</string>

    <!--Search-->
    <string name="search_toolbar_title">Buscá tu actividad</string>

    <!--Quiz-->
    <string name="quiz_info_title">Completá el cuestionario</string>
    <string name="quiz_info_title_update_preferences">Actualizá tus datos</string>
    <string name="quiz_hobbies_title">¿Cuáles son tus hobbies?</string>
    <string name="quiz_next">Siguiente</string>
    <string name="quiz_end_description">¡Gracias por completar nuestro cuestionario! La información que nos diste nos va a ayudar para hacerte las mejores recomendaciones.</string>
    <string name="quiz_info_description">Queremos conocerte mejor, por eso te pedimos que completes el siguiente cuestionario.</string>
    <string name="quiz_info_genero">Género</string>
    <string name="quiz_info_otro_genero">Ingresá otro género</string>
    <string name="quiz_info_edad">Edad</string>
    <string name="quiz_info_estadocivil">Estado civil</string>
    <string name="quiz_info_estudios">Estudios</string>
    <string name="quiz_info_ocupacion">Ocupacion</string>
    <string name="quiz_info_field_error">Completa este dato</string>
    <string name="quiz_info_dialog_title_genero">Seleccioná tu género</string>
    <string name="quiz_info_dialog_title_estadocivil">Selccioná tu estado civil</string>
    <string name="quiz_info_dialog_title_estudios">Seleccioná tu nivel de estudios</string>
    <string name="quiz_info_dialog_title_ocupacion">Seleccioná un ocupación</string>
    <string name="quiz_end_title">Cuestionario finalizado</string>
    <string name="quiz_end_continue">Continuar</string>

    <!--Not tagged-->
    <string name="back">Volver</string>
    <string name="tou_alert">Acepto los términos y condiciones de uso</string>
    <string name="cancel">Cancelar</string>
    <string name="travels">Mis viajes</string>
    <string name="select_destiny">Seleccionar destino</string>
    <string name="select_activities">Seleccionar actividades</string>
    <string name="add_activity">Agregar</string>
    <string name="travel_modify">Modificar viaje</string>
    <string name="create_activity">Crear itinerario</string>
    <string name="start">Comenzar</string>

    <!--Travel Creation-->
    <string name="travel_creation_description">Ponele un nombre a tu viaje, te ayudará a identificarlo luego. Ingresá tambien las fechas en las que pensás viajar.</string>
    <string name="travel_creation_name">Nombre del viaje</string>
    <string name="travel_creation_from_date">Fecha de inicio</string>
    <string name="travel_creation_until_date">Fecha de fin</string>
    <string name="travel_creation_budget">¿Cuál es tu presupuesto?</string>
    <string name="travel_creation_button">Crear mi Viaje</string>
    <string name="travel_creation_field_error">Completa este dato</string>
    <string name="travel_creation_date_format">%1$d-%2$d-%3$d</string>

    <!--My Travels-->
    <string name="travels_creation">Crear viaje</string>
    <string name="travels_title">Mis Viajes</string>
    <string name="travels_watch">Ver</string>
    <string name="travels_date">Desde: %1$s Hasta: %2$s</string>
    <string name="travels_no_travels_firstline">En esta sección vas a ver los viajes que crees. Todavía no tenés ninguno!</string>
    <string name="travels_no_travels_secondline">¿Qué estás esperando?</string>

    <!--Destination Creation-->
    <string name="destination_creation_actividades">Ver actividades</string>
    <string name="destination_creation_dialog_title">Seleccioná las fechas</string>
    <string name="destination_creation_dialog_from_date">Fecha desde</string>
    <string name="destination_creation_dialog_until_date">Fecha hasta</string>
    <string name="destination_creation_dialog_create">Agregar</string>
    <string name="destination_creation_dialog_field_error">Completa este dato</string>

    <!--Destination Creation - Progress Bar-->
    <string name="progressbar_start">Estamos preparando tu itinerario…</string>
    <string name="progressbar_during">Ya casi estamos</string>
    <string name="progressbar_done">¡Listo!</string>
    <string name="progressbar_failure">Hubo un problema, no pudimos crear tu viaje pero no te hagás problema podés volver a intentarlo.</string>

    <!--My Destinations-->
    <string name="destinations_title">Mis Destinos</string>
    <string name="destinations_no_destinations">Todavía no agregaste destinos a tu viaje. Empezá creando uno clickeando en el \'+\'</string>

    <!--Activity details-->
    <string name="activity_details_cost_dollar">USD %1$d ·\u0020</string>
    <string name="activity_details_cost_pesos">ARS %1$d ·\u0020</string>
    <string name="activity_details_cost_free">Sin costo ·\u0020</string>
    <string name="activity_details_availability">Disponibilidad</string>
    <string name="activity_details_duration_short">Duración corta</string>
    <string name="activity_details_duration_medium">Duración media</string>
    <string name="activity_details_duration_large">Duración larga</string>
    <string name="activity_details_duration_all_day">Todo el día</string>
    <string name="activity_details_mon_day">Lun</string>
    <string name="activity_details_tue_day">Mar</string>
    <string name="activity_details_wed_day">Mie</string>
    <string name="activity_details_thu_day">Jue</string>
    <string name="activity_details_fri_day">Vie</string>
    <string name="activity_details_sat_day">Sab</string>
    <string name="activity_details_sun_day">Dom</string>
    <string name="activity_details_morning_day">Mañana</string>
    <string name="activity_details_afternoon_day">Tarde</string>
    <string name="activity_details_night_day">Noche</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">399355764046745</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb399355764046745</string>
    <string name="com_facebook_loginview_logged_in_using_facebook_f1gender">Logged in using Facebook</string>
    <string name="base_api_url">https://proyecto.brazilsouth.cloudapp.azure.com/rest-api/</string>
    <string name="image_of_City">Imagen de la Ciudad</string>
    <string name="city_image">Imagen Ciudad</string>

</resources>
