<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.android.fragments.HomeFragment">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteSmoke"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_travels_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travels_title"
            android:textColor="#000"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toTopOf="@id/recyclerview_travels"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearlayout_no_travels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mainLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textview_travels_no_travels_firstline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/travels_no_travels_firstline"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textview_travels_no_travels_secondline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travels_no_travels_secondline"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_travels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textview_travels_title"
            tools:listitem="@layout/travel_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/create_travel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>