<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.emmasuzuki.easyform.EasyForm
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:showErrorOn="change"
            app:submitButton="@+id/button_destination_dialog_creation">

            <RelativeLayout
                android:id="@+id/relativelayout_destination_dialog_from_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.emmasuzuki.easyform.EasyTextInputLayout
                    android:id="@+id/textinputlayout_destination_dialog_from_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/destination_creation_dialog_from_date"
                    android:inputType="none"
                    app:errorMessage="@string/destination_creation_dialog_field_error"
                    app:errorType="empty" />

                <ImageButton
                    android:id="@+id/imagebutton_destination_dialog_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/textinputlayout_destination_dialog_from_date"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_date_range_black_24dp"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativelayout_destination_dialog_until_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativelayout_destination_dialog_from_date"
                android:layout_marginTop="10dp">

                <com.emmasuzuki.easyform.EasyTextInputLayout
                    android:id="@+id/textinputlayout_destination_dialog_until_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/destination_creation_dialog_until_date"
                    android:inputType="none"
                    app:errorMessage="@string/destination_creation_dialog_field_error"
                    app:errorType="empty" />

                <ImageButton
                    android:id="@+id/imagebutton_destination_dialog_until_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/textinputlayout_destination_dialog_until_date"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_date_range_black_24dp"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_destination_dialog_creation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/relativelayout_destination_dialog_until_date"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/destination_creation_dialog_create"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </com.emmasuzuki.easyform.EasyForm>

    </RelativeLayout>

</layout>